// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/MaxLengthInput should match snapshot 1`] = `
<div>
  <input
    class="MaxLengthInput input"
    value=""
  />
</div>
`;

exports[`components/MaxLengthInput should match snapshot 2`] = `
<div>
  <input
    class="MaxLengthInput input"
    value="less than 20"
  />
</div>
`;

exports[`components/MaxLengthInput should match snapshot 3`] = `
<div>
  <input
    class="MaxLengthInput input has-error"
    value="Where is Jessica Hyde?"
  />
  <span
    class="MaxLengthInput__validation"
  >
    -
    2
  </span>
</div>
`;
